Add web socket server project

--- a/VSBuildMonitor/VSBuildMonitor.csproj
+++ b/VSBuildMonitor/VSBuildMonitor.csproj
@@ -24,4 +24,7 @@
 	<ItemGroup>
 	  <Folder Include="WebSocketServer\" />
 	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\WebSocketServer\WebSocketServer.csproj" />
+	</ItemGroup>
 </Project>
