--- a/ClientConsole/ClientConsole.csproj
+++ b/ClientConsole/ClientConsole.csproj
@@ -15,6 +15,6 @@
 
 
   <ItemGroup>
-    <ProjectReference Include="..\WebSocketServer\WebSocketServer.csproj" />
+    <ProjectReference Include="..\BuildMonitor\BuildMonitor.csproj" />
   </ItemGroup>
 </Project>
