--- a/ClientConsole/ClientConsole.csproj
+++ b/ClientConsole/ClientConsole.csproj
@@ -17,4 +17,7 @@
     <ProjectReference Include="..\BuildMonitor\BuildMonitor.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+  </ItemGroup>
 </Project>
